--- a/Vue/package.json
+++ b/Vue/package.json
@@ -22,7 +22,8 @@
     "vue-chartjs": "^5.3.0",
     "vue-echarts": "^6.6.8",
     "vue-router": "^4.2.5",
-    "vue3-persian-datetime-picker": "^1.2.2"
+    "vue3-persian-datetime-picker": "^1.2.2",
+    "vuetify": "^3.6.0-beta.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
