--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "jalaali-js": "^1.2.7"
     }
 }
